fixed the navigation and wrapped the rest

--- a/Lab/day4/fox/css/c.css
+++ b/Lab/day4/fox/css/c.css
@@ -63,3 +63,14 @@ button:active, input[type="button"]:active, input[type="submit"]:active, input[t
 	 -webkit-box-shadow: none !important;
 	 box-shadow: none !important;
 }
+nav{
+	width: 100%;
+	overflow: hidden;
+}
+#container{
+	margin-top: 15px;
+	padding: 15px 30px;
+	border: 5px solid;
+	border-color: #12ab8d;
+	overflow: hidden;
+}
